# cmd/api/auth.go
@@ -1,18 +1,30 @@
 package main
 
 import (
+	"context"
 	"errors"
 	"fmt"
 	"net/http"
 	"time"
 
+	"github.com/CepeshIII/Project07_API_Server/internal/auth"
+	"github.com/CepeshIII/Project07_API_Server/internal/httputils"
 	"github.com/CepeshIII/Project07_API_Server/internal/mailer"
 	"github.com/CepeshIII/Project07_API_Server/internal/store"
+	"github.com/golang-jwt/jwt/v5"
 )
+
+const sessionCookieName = "session_token"
+const accessCookieName = "access_token"
 
 type RegisterUserPayload struct {
 	Username string `json:"username" validate:"required,max=100" default:"user"`
 	Email    string `json:"email" validate:"required,email,max=255"  default:"mail@example.com"`
+	Password string `json:"password" validate:"required,min=3,max=72"  default:"password"`
+}
+
+type LoginUserPayload struct {
+	Username string `json:"username" validate:"required,max=100" default:"user"`
 	Password string `json:"password" validate:"required,min=3,max=72"  default:"password"`
 }
 
@@ -33,7 +45,7 @@ type RegisterUserResponse struct {
 //	@Failure		400		{object}	ErrorEnvelope
 //	@Failure		409		{object}	ErrorEnvelope
 //	@Failure		500		{object}	ErrorEnvelope
-//	@Router			/authentication/user [post]
+//	@Router			/auth/register  [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
 	if err := readJSON(w, r, &payload); err != nil {
@@ -59,14 +71,14 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 	ctx := r.Context()
 
-	plainToken, hashToken, err := NewInvitationToken()
+	plainToken, tokenHash, err := NewInvitationToken()
 	if err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
 
 	// store the user
-	if err := app.store.Users.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp); err != nil {
+	if err := app.store.Users.CreateAndInvite(ctx, user, tokenHash, app.config.mail.exp); err != nil {
 		if errors.Is(err, store.ErrorDuplicateEmail) || errors.Is(err, store.ErrorDuplicateUsername) {
 			app.conflictResponse(w, r, err)
 			return
@@ -136,4 +148,270 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		app.internalServerError(w, r, err)
 		return
 	}
+}
+
+// LoginUserHandler godoc
+//
+//	@Summary		Logins a user
+//	@Description	Logins a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		LoginUserPayload	true	"User credentials"
+//	@Success		200		{object}	RegisterUserResponseEnvelope
+//	@Failure		401		{object}	ErrorEnvelope
+//	@Failure		400		{object}	ErrorEnvelope
+//	@Failure		500		{object}	ErrorEnvelope
+//	@Router			/auth/login  [post]
+func (app *application) loginUserHandler(w http.ResponseWriter, r *http.Request) {
+	var payload LoginUserPayload
+
+	if err := readJSON(w, r, &payload); err != nil {
+		app.clearSessionCookie(w)
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	if err := Validate.Struct(payload); err != nil {
+		app.clearSessionCookie(w)
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	ctx := r.Context()
+
+	// check the user
+	user, err := app.store.Users.GetByUsername(ctx, payload.Username)
+	if err != nil {
+		if errors.Is(err, store.ErrNotFound) {
+			app.clearSessionCookie(w)
+			app.statusUnauthorizedError(w, r, errors.New("Invalid Username or password"))
+			return
+		}
+
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	// check the user password
+	if !user.Password.CheckHash(payload.Password) {
+		app.statusUnauthorizedError(w, r, errors.New("Invalid Username or password"))
+		return
+	}
+
+	token, tokenHash, err := NewSessionToken()
+	if err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	session := store.SessionData{
+		UserID:    user.ID,
+		TokenHash: tokenHash,
+		UserAgent: r.Header.Get("User-Agent"),
+		IPAdress:  httputils.GetClientIP(r),
+		IsRevoke:  false,
+		ExpiresAt: time.Now().Add(app.config.auth.tokens.sessionTokenExp),
+	}
+
+	if err := app.store.Sessions.CreateSession(ctx, &session); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	cookie := http.Cookie{
+		Name:     sessionCookieName,
+		Value:    token,
+		Path:     "/",
+		HttpOnly: true,
+		Secure:   true, // Переконайся, що використовуєш HTTPS (у локальній розробці без TLS браузер може відхилити Secure куку!)
+		SameSite: http.SameSiteLaxMode,
+		Expires:  session.ExpiresAt,
+	}
+
+	response := &RegisterUserResponse{
+		User: user,
+		// Token: token,
+	}
+
+	http.SetCookie(w, &cookie)
+
+	// set new accessToken
+	if err := app.setAccessToken(w, session.UserID); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusOK, response); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
+
+// RefreshAccessTokenHandler godoc
+//
+//	@Summary		Refreshes Access Token
+//	@Description	Refreshes Access Token
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	MessageEnvelope
+//	@Failure		400	{object}	ErrorEnvelope
+//	@Failure		401	{object}	ErrorEnvelope
+//	@Failure		500	{object}	ErrorEnvelope
+//	@Router			/auth/refresh [post]
+func (app *application) refreshAccessTokenHandler(w http.ResponseWriter, r *http.Request) {
+	// Try to get session token from the cookie
+	cookie, err := r.Cookie(sessionCookieName)
+	if err != nil {
+		if errors.Is(err, http.ErrNoCookie) {
+			app.statusUnauthorizedError(w, r, errors.New("Session token has expired. Please refresh your session."))
+			return
+		}
+		app.badRequestResponse(w, r, err)
+		return
+	}
+	sessionToken := cookie.Value
+	tokenHash := HashToken(sessionToken)
+
+	// Check session token in the database
+	session := store.SessionData{
+		TokenHash: tokenHash,
+	}
+
+	if err := app.store.Sessions.GetSessionByTokenHash(r.Context(), &session); err != nil {
+		if errors.Is(err, store.ErrNotFound) {
+			app.clearSessionCookie(w)
+			app.statusUnauthorizedError(w, r, errors.New("Session not found or invalid. Please log in again."))
+			return
+		}
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	if session.IsRevoke {
+		app.clearSessionCookie(w)
+		app.statusUnauthorizedError(w, r, errors.New("Session has been revoked. Please log in again."))
+		return
+	}
+
+	if time.Now().After(session.ExpiresAt) {
+		app.clearSessionCookie(w)
+		app.statusUnauthorizedError(w, r, errors.New("Session has expired. Please log in again."))
+		return
+	}
+
+	// Send a new access token
+	if err := app.setAccessToken(w, session.UserID); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusOK, "Access token refreshed successfully"); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
+
+func (app *application) clearSessionCookie(w http.ResponseWriter) {
+	http.SetCookie(w, &http.Cookie{
+		Name:     sessionCookieName,
+		Value:    "",
+		Path:     "/",
+		HttpOnly: true,
+		Secure:   true,
+		SameSite: http.SameSiteLaxMode,
+		MaxAge:   -1,
+	})
+
+	app.clearAccessCookie(w)
+}
+
+func (app *application) clearAccessCookie(w http.ResponseWriter) {
+	http.SetCookie(w, &http.Cookie{
+		Name:     accessCookieName,
+		Value:    "",
+		Path:     "/",
+		HttpOnly: true,
+		Secure:   true,
+		SameSite: http.SameSiteLaxMode,
+		MaxAge:   -1,
+	})
+}
+
+func (app *application) acssesTokenMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		// Try to get acsees token from the cookie
+		cookie, err := r.Cookie(accessCookieName)
+		if err != nil {
+			if errors.Is(err, http.ErrNoCookie) {
+				app.statusUnauthorizedError(w, r, errors.New("Access token has expired. Please refresh your session."))
+				return
+			}
+
+			app.badRequestResponse(w, r, err)
+			return
+		}
+
+		// Validate JWT access token and extract claims
+		// claims, err := ValidateAccessToken(cookie.Value)
+
+		claims, err := app.auth.ValidateToken(cookie.Value)
+		if err != nil {
+			app.clearAccessCookie(w)
+			app.statusUnauthorizedError(w, r, err)
+			return
+		}
+
+		// Inject authenticated user ID into request context
+		ctx := context.WithValue(r.Context(), userIDCtx, claims.UserID)
+
+		// Pass execution to next handler with updated context
+		next.ServeHTTP(w, r.WithContext(ctx))
+
+	})
+}
+
+func (app *application) setAccessToken(w http.ResponseWriter, userID int64) error {
+	exp := time.Now().Add(app.config.auth.tokens.accessTokenExp)
+
+	claims := auth.CustomClaims{
+		UserID: userID,
+		Role:   "admin",
+		RegisteredClaims: jwt.RegisteredClaims{
+			ExpiresAt: jwt.NewNumericDate(exp),
+			IssuedAt:  jwt.NewNumericDate(time.Now()),
+			NotBefore: jwt.NewNumericDate(time.Now()),
+			Issuer:    app.config.auth.jwtAuth.iss,
+			Audience: jwt.ClaimStrings{
+				app.config.auth.jwtAuth.iss,
+			},
+		},
+	}
+
+	// claims := jwt.MapClaims{
+	// 	"sub":  userID,
+	// 	"role": "admin",
+	// 	"exp":  time.Now().Add(app.config.auth.tokens.accessTokenExp).Unix(),
+	// 	"nbf":  time.Now().Unix(),
+	// 	"iss":  app.config.auth.jwtAuth.iss,
+	// }
+
+	token, err := app.auth.GenerateToken(claims)
+	if err != nil {
+		return err
+	}
+
+	cookie := http.Cookie{
+		Name:     accessCookieName,
+		Value:    token,
+		Path:     "/",
+		HttpOnly: true,
+		Secure:   true,
+		SameSite: http.SameSiteLaxMode,
+		Expires:  exp,
+	}
+
+	http.SetCookie(w, &cookie)
+	return nil
 }
