# cmd/api/main.go
@@ -4,6 +4,7 @@ import (
 	"log"
 	"time"
 
+	"github.com/CepeshIII/Project07_API_Server/internal/auth"
 	"github.com/CepeshIII/Project07_API_Server/internal/db"
 	"github.com/CepeshIII/Project07_API_Server/internal/env"
 	"github.com/CepeshIII/Project07_API_Server/internal/logger"
@@ -60,6 +61,20 @@ func main() {
 				apikey: env.GetString("MAILTRAP_API_KEY", ""),
 			},
 		},
+		auth: authConfig{
+			basic: basicAuthConfig{
+				username: env.GetString("AUTH_BASIC_USERNAME", "admin"),
+				password: env.GetString("AUTH_BASIC_PASSWORD", "admin"),
+			},
+			jwtAuth: jwtAuthConfig{
+				jwtSecret: env.GetString("AUTH_JWT_SECRET", "your-super-secret-key-from-env"),
+				iss:       "project07",
+			},
+			tokens: tokensConfig{
+				accessTokenExp:  time.Duration(env.GetInt("ACCESS_TOKEN_EXP", 15)) * time.Minute,
+				sessionTokenExp: time.Duration(env.GetInt("SESSION_TOKEN_EXP", 24*30)) * time.Hour,
+			},
+		},
 	}
 
 	// logger
@@ -97,11 +112,18 @@ func main() {
 	// 	logger.Fatal(err)
 	// }
 
+	authenticator := auth.NewJWTAuthenticator(
+		cfg.auth.jwtAuth.jwtSecret,
+		cfg.auth.jwtAuth.iss,
+		cfg.auth.jwtAuth.iss,
+	)
+
 	app := &application{
 		config: cfg,
 		store:  store,
 		logger: logger,
 		mailer: mailer,
+		auth:   authenticator,
 	}
 
 	mux := app.mount()
